Constraint Satisfaction
Working on getting a nice availability reduction method going in the
Person class. So far, it only half works. Because of this, the
AvailabilitySummary page will sometimes crash.